[package]
name = "ruly"
version = "0.1.0"
authors = ["darshimo <takumishimoda7623@gmail.com>"]
edition = "2018"
categories = ["parsing"]
keywords = ["parsing", "cfg"]
description = "parser generator from context free grammar"
license = "MIT"
repository = "https://github.com/darshimo/ruly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"