[package]
name = "ruly"
version = "2.0.0"
authors = ["darshimo <takumishimoda7623@gmail.com>"]
edition = "2018"
categories = ["parsing"]
keywords = ["parsing", "cfg"]
description = "parser generator from context free grammar"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darshimo/ruly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
pmacro_ruly = "0.2.0"